--- a/index.html
+++ b/index.html
@@ -140,29 +140,10 @@
                                         <a href="#">Home</a>
                                         <ul class="sub-menu">
                                             <li>
-                                                <a href="index.html">Home Layout One</a>
+                                                <a href="index.html">Home Layout </a>
                                             </li>
                                             <li>
-                                                <a href="index02.html">Home Layout Two</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index03.html">Home Layout Three</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index04.html">Home Layout Four</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index05.html">Home Layout Five</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index06.html">Home Layout Six</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index07.html">Home Layout Seven</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index08.html">Home Layout Eight</a>
-                                            </li>
+                                               
                                         </ul>
                                     </li>
                                     <li>
@@ -630,7 +611,7 @@
                             </div><!-- /.col-md-6 -->
                             <div class="col-md-6">
                                 <div class="image-content">
-                                    <img src="assets/images/about-image.png" alt="about" />
+                                    <img src="assets/images/apartment/apartamento2.jpeg" alt="about" />
                                 </div><!-- /.text-content -->
                             </div><!-- /.col-md-6 -->
                         </div> <!-- /.home -->
@@ -965,7 +946,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-6">
                     <div class="apartments-content">
                         <div class="image-content">
-                            <a href="apartment-single.html"><img src="assets/images/apartment/" alt="apartment" /></a>
+                            <a href="apartment-single.html"><img src="assets/images/apartment/apartamento3.jpeg" alt="apartment" /></a>
                         </div><!-- /.image-content -->
                     
                         <div class="text-content">
