--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
                     </div><!-- /.partments-content -->
                 </div><!-- /.col-md-4 -->
             </div><!-- /.row -->
-            <a href="#" class="button nevy-button">All Apartments</a>
+            <a href="#" class="button nevy-button">todos los Apartmentos</a>
         </div><!-- /.container -->
     </div><!-- /.Apartments-area-->
 
@@ -1042,35 +1042,35 @@
                         <div class="gallery-left-content">
                             <div class="row">
                                 <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <a class="image-pop-up" href="assets/images/gallery/gallery-one.png">
+                                    <a class="image-pop-up" href="assets/images/gallery/imagen cuarto.webp">
                                         <img src="assets/images/gallery/gallery-one.png" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <a class="image-pop-up" href="assets/images/gallery/gallery-two.png">
+                                    <a class="image-pop-up" href="assets/images/gallery/imagen1.jpg">
                                         <img src="assets/images/gallery/gallery-two.png" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                                 <div class="clearfix visible-xs-block"></div>
                                 <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <a class="image-pop-up" href="assets/images/gallery/gallery-three.png">
+                                    <a class="image-pop-up" href="assets/images/gallery/imagen2.jpg">
                                         <img src="assets/images/gallery/gallery-three.png" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <a class="image-pop-up" href="assets/images/gallery/gallery-four.png">
+                                    <a class="image-pop-up" href="assets/images/gallery/imagen3.jpg">
                                         <img src="assets/images/gallery/gallery-four.png" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                                 <div class="clearfix visible-xs-block"></div>
                                 <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <a class="image-pop-up" href="assets/images/gallery/gallery-five.png">
+                                    <a class="image-pop-up" href="assets/images/gallery/images.jpeg">
                                         <img src="assets/images/gallery/gallery-five.png" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-4 col-sm-6 col-xs-6">
                                     <a class="image-pop-up" href="#">
-                                        <img src="assets/images/gallery/gallery-six.png" alt="gallery" />
+                                        <img src="assets/images/gallery/images 5.jpeg" alt="gallery" />
                                     </a>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.row -->
@@ -1081,7 +1081,7 @@
                             <h2>Our<br/> Photo Gallery</h2>
                             <h3>Best of our <br/>Event portfolio Photos</h3>
                             <p>Amorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae nibh nisl. Cras etitikis mauris eget lorem ultricies ferme ntum a inti diam. Morbi mollis pellen tesque offs aiug ueia nec rhoncus. Nam ute ultricies.</p>
-                            <a href="gallery.html" class="button nevy-button">All Photos &amp; Video</a>
+                            <a href="gallery.html" class="button nevy-button">todas las fotos</a>
                         </div><!-- /.right-content -->
                     </div><!-- /.col-md-5 -->
                 </div><!-- /.row -->
