--- a/index.html
+++ b/index.html
@@ -213,15 +213,15 @@
             <button type="button" class="overlay-close">Close</button>
             <nav>
                 <ul class="overlay-menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a>
                         <ul class="sub-menu">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Work</a></li>
                             <li><a href="#">Clients</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="#">About</a></li>
                                     <li><a href="#">Work</a></li>
                                     <li><a href="#">Clients</a></li>
