--- a/apartment.html
+++ b/apartment.html
@@ -41,8 +41,8 @@
 
 <body>
     <!-- ====== Header Mobile area ====== -->
-    <header class="mobile-header-area bg-nero hidden-md hidden-lg">
-        <div class="container">
+    <!-- <header class="mobile-header-area bg-nero hidden-md hidden-lg"> -->
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-xs-12 tb">
                     <div class="mobile-header-block">
@@ -142,27 +142,7 @@
                                             <li>
                                                 <a href="index.html">Home Layout One</a>
                                             </li>
-                                            <li>
-                                                <a href="index02.html">Home Layout Two</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index03.html">Home Layout Three</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index04.html">Home Layout Four</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index05.html">Home Layout Five</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index06.html">Home Layout Six</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index07.html">Home Layout Seven</a>
-                                            </li>                                            
-                                            <li>
-                                                <a href="index08.html">Home Layout Eight</a>
-                                            </li>
+                                         
                                         </ul>
                                     </li>
                                     <li>
@@ -199,9 +179,7 @@
                                     <li>
                                         <a href="#">Blog</a>
                                         <ul class="sub-menu">
-                                            <li>
-                                                <a href="blog.html">Blog</a>
-                                            </li>                                            
+                                                                                      
                                             <li>
                                                 <a href="blog-single.html">Single Post</a>
                                             </li>
@@ -232,7 +210,7 @@
             <button type="button" class="overlay-close">Close</button>
             <nav>
                 <ul class="overlay-menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a>
                         <ul class="sub-menu">
                             <li><a href="#">Home</a></li>
@@ -295,7 +273,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- /.header-search-content -->  
+        </div>/.header-search-content   -->
 
         <!-- Registrar Or Sign In-content -->
         <div class="cd-user-modal">
