Revert "cambio por margara"

--- a/gallery.html
+++ b/gallery.html
@@ -143,7 +143,26 @@
                                                 <a href="index.html">Home Layout One</a>
                                             </li>
                                             <li>
-                                          
+                                                <a href="index02.html">Home Layout Two</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index03.html">Home Layout Three</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index04.html">Home Layout Four</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index05.html">Home Layout Five</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index06.html">Home Layout Six</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index07.html">Home Layout Seven</a>
+                                            </li>                                            
+                                            <li>
+                                                <a href="index08.html">Home Layout Eight</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>
