--- a/apartment-single.html
+++ b/apartment-single.html
@@ -16,7 +16,7 @@
 
 	<!-- Titles
 	================================================== -->
-	<title>Apartments-single</title>
+	<title>Apartmento- Individual</title>
 
 	<!-- Favicons
 	================================================== -->
@@ -476,36 +476,39 @@
     				<div class="family-apartment-content mobile-extend">
                         <div class="tb">
                             <div class="tb-cell">
-        					   <h3 class="apartment-title">Family Apartment</h3>
+        					   <h3 class="apartment-title">Apartmento Familiar</h3>
                             </div><!-- /.tb-cell -->
                             <div class="tb-cell">
-        					   <p class="pull-right rent">Rent/Month: $550</p>
+        					   <p class="pull-right rent">Valor de la Renta: $550</p>
                             </div><!-- /.tb-cell -->
                         </div><!-- /.tb -->
     					<div class="clearfix"></div><!-- /.clearfix -->
-    					<p class="apartment-description default-gradient-before">3000 sq-ft., 3 Bedroom, Semi-furnished, Luxurious, South facing Apartment for Rent in Rangs Malancha, Melbourne.</p>
+    					<p class="apartment-description default-gradient-before">cuartos grandes y aires condioales piso de madera, patio grande y pisina</p>
     					<div class="price-details">
-    						<h3>Price Details-</h3>
+    						<h3>Detalles del Precio</h3>
     						<ul>
-    							<li><span>Rent/Month: </span> $550 (negotiable)</li>
-    							<li><span>Service Charge :</span> 8,000/= Tk per month, subject to change</li>
-    							<li><span>Security Deposit :</span> 3 month’s rent</li>
-    							<li><span>Flat Release Policy :</span> 3 months earlier notice required</li>
+    							<li><span>Valor de la Renta:</span> $550 (negociable)</li>
+    							<li><span>Servio de internet:</span> 8,000 </li>
+                                <li><span>Servios Adicionales:</span> TV Cable, Telefono, wiffi </li>
+    							<li><span>Deposito de Seguridad:</span> 3 noches de rentas</li>
+    							<li><span>Politica:</span> 3 meses antes de la notificación requerida</li>
     						</ul>
     					</div><!-- /.price -->
 
     					<div class="property-details">
-    						<h3>Property Details-</h3>
+    						<h3>Detalles de la propiedad</h3>
     						<ul>
-    							<li><span>Address  &amp; Area :</span> Rangs Malancha, House-68, Road-6A (Dead End Road), Dhanmondi Residential Area.</li>
-    							<li><span>Flat Size :</span> 3000 Sq Feet.</li>
-    							<li><span>Floor :</span> A5 (5th Floor) (6 storied Building ) (South Facing Unit)</li>
-    							<li><span>Room Category :</span> 3 Large Bed Rooms with 3 Verandas, Spacious Drawing, Dining &amp; Family    Living Room, Highly Decorated Kitchen with Store Room and Servant room with attached Toilet.</li>
-    							<li><span>Facilities :</span> 1 Modern Lift, All Modern Amenities &amp; Semi Furnished.</li>
-    							<li><span>Additional Facilities :</span> a. Electricity with full generator load, b. Central Gas Geyser, c. 2 Car Parking with 1 Driver’s Accommodation, d. Community Conference Hall, e. Roof Top Beautified Garden and Grassy Ground, f. Cloth Hanging facility with CC camera </li>
+    							<li><span>Dirrecion  &amp; Area :</span> Barrio la Victoria Kr 69B</li>
+    							<li><span>Descripcion :</span> cuartos grandes y aires condioales piso de madera, patio grande y pisina</li>
+    							<li><span>Numero de cuarto:</span> 4 </li>
+                                <li><span>Numero de baño:</span> 3 </li>
+                                <li><span>Parqueadero:</span> Para 2 Utomovil</li>
+    							<li><span>Capacidad:</span> capacidad para 8 personas</li>
+    							<li><span>Fecha Inicial de Disponibilidad:</span> Abril 4 de 2021</li>
+                                <li><span>Fecha Final de Disponibilidad:</span> Abril 15 de 2021 </li>
     						</ul>
     					</div><!-- /.Property -->
-    					<div class="apartment-overview">
+    					<!-- <div class="apartment-overview">
     						<div class="row">
     							<div class="col-md-12">
     								<h3>Apartment Overview</h3>
@@ -520,11 +523,11 @@
                                             <li>Car Parking Per Space <span class="pull-right">02</span></li>    
                                             <li>Air Condition <span class="pull-right">Yes</span></li>
                                         </ul>
-                                    </div><!-- /.apartment-overview -->
-    							</div><!-- /.col-md-12 -->
-    						</div><!-- /.row -->
-    					</div><!-- /.overview -->
-    					<div class="indoor-features">
+                                    </div>  /.apartment-overview -->
+    							<!-- </div>/.col-md-12 -->
+    						<!--</div> /.row -->
+    					<!-- </div>o verview --> 
+    					<!-- <div class="indoor-features">
     						<div class="row">
     							<div class="col-md-6">
     								<h3 class="features-title">Indoor features:</h3>
@@ -541,8 +544,8 @@
     									<li>alcony</li>
     									<li>Inter Com</li>
     								</ul>
-    							</div><!-- /.col-md-6 -->
-    							<div class="col-md-6">
+    							</div>< /.col-md-6 -->
+    							<!-- <div class="col-md-6">
     								<h3 class="features-title">Indoor features:</h3>
     								<ul class="features-list">
     									<li>South facing</li>
@@ -550,11 +553,11 @@
     									<li>Drivers quarters</li>
     									<li>Generator</li>
     									<li>Lift</li>
-    								</ul>
-    							</div><!-- /.col-md-6 -->
-    						</div><!-- /.row -->
-    					</div><!-- /.indoor -->
-    				</div><!-- /.family-apartment-content -->
+    								</ul> -->
+    							<!--</div> /.col-md-6 -->
+    						<!--</div> /.row -->
+    					<!--</div> /.indoor -->
+    				</div><!--/.family-apartment-content -->
                     <div class="hidden-md hidden-lg text-center extend-btn">
                         <span class="extend-icon">
                             <i class="fa fa-angle-down"></i>
@@ -569,33 +572,32 @@
         						<form action="booking.html" method="get" class="advance_search_query booking-form">
         							<div class="form-bg seven">
         								<div class="form-content">
-                                            <h2 class="form-title">Book This Apartment</h2>
+                                            <h2 class="form-title">Quieres reservar este Apartamento</h2>
         									<div class="form-group">
-        									   <label>Full Name</label>
-        									   <input type="text" name="FirstName" placeholder="Full name">
+        									   <label>Nombre Completo</label>
+        									   <input type="fullName" name="fullName" placeholder="Nombre Completo">
         									</div><!-- /.form-group -->
         									<div class="form-group">
-                            					<label>Phone Number</label>
-                                                <input type="tel" name="phone number" placeholder="+99(99)9999-9999">
+                            					<label>Correo Electronico</label>
+                                                <input type="email" name="email" placeholder="example@domain.com">
         									</div><!-- /.form-group -->
         									<div class="form-group">
-        										<label>Email Address</label>
-        										<input type="email" name="Email" placeholder="example@domain.com">
+        										<label>Contraseña</label>
+        										<input type="password" name="password" placeholder="Contraseña">
         									</div><!-- /.form-group -->
         									<div class="form-group">
-        									    <label>Family Member</label>
-                                                <input type="number" step="1" min="1" max="100" name="quantity" value="1" title="Qty" size="4" class="input-text">
+        									    <label>ciudad</label>
+                                                <input type="city" name="city" placeholder="Ciudad">
         									</div><!-- /.form-group -->
-                                            <div class="form-group">
-                                                <label>Children</label>
-                                                <input type="number" step="1" min="1" max="100" name="quantity" value="1" title="Qty" size="4" class="input-text">
-                                            </div><!-- /.form-group -->
+                                           
         									<div class="form-group">
-        									    <label>Your Message</label>
-        		                                <textarea name="message" placeholder="Message" class="form-controller"></textarea>
+                                                <p class="fieldset">
+                                                    <input type="checkbox" name="dpr"id="accept-terms">
+                                                    <label for="accept-terms">Aceptas los<a href="#0">Terminos</a> y condiciones</label>
+                                                </p>
         									</div><!-- /.form-group -->
         									<div class="form-group">
-        										<button type="submit" class="button default-template-gradient button-radius">Request Booking</button>
+        										<button type="submit" class="button default-template-gradient button-radius">Aceptar</button>
         									</div><!-- /.form-group -->
         								</div><!-- /.form-content -->
         							</div><!-- /.form-bg -->
